# Sanmill

./: .all-contributorsrc  .clang-format  .cursorrules  .editorconfig  .gitattributes  .gitignore  .vera-profile  AGENTS.md  AUTHORS  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.md  CPPLINT.cfg  Cargo.toml  Copying.txt  History.txt  INSTALL.md  INTEGRATION_TEST_STATUS.md  Licence.txt  NineChess棋谱.txt  README-zh_CN.md  README.md  Readme.md  Sanmill.cbp  Sanmill.dev  VOICE_ASSISTANT_SETUP.md  android-pgo.sh  app.ui  appveyor.yml  change-android-appid.ps1  change-android-appid.sh  ci-upgrade-flutter-version.sh  clean.sh  cov.sh  deploy.sh  eol.sh  fen-to-board.py  flutter-init.sh  (+26 more)
crates/perfect-db/: Cargo.toml  build.rs
crates/perfect-db/csrc/: config.h  debug.h  option.cpp  option.h  perfect_api.cpp  perfect_api.h  perfect_c_api.cpp  perfect_c_api.h  perfect_common.cpp  perfect_common.h  perfect_debug.cpp  perfect_debug.h  perfect_errors.cpp  perfect_errors.h  perfect_eval_elem.cpp  perfect_eval_elem.h  perfect_game.cpp  perfect_game.h  perfect_game_state.cpp  perfect_game_state.h  perfect_hash.cpp  perfect_hash.h  perfect_init.cpp  perfect_init.h  perfect_log.cpp  perfect_log.h  perfect_move.cpp  perfect_move.h  perfect_platform.h  perfect_player.cpp  perfect_player.h  perfect_rules.cpp  perfect_rules.h  perfect_sec_val.cpp  perfect_sec_val.h  perfect_sector.cpp  perfect_sector.h  perfect_sector_graph.cpp  perfect_sector_graph.h  perfect_symmetries.cpp  (+8 more)
crates/perfect-db/src/: database.rs  lib.rs  mill.rs  patch.rs  rust_global.rs  wdl_plane.rs
crates/perfect-db/src/file_format/: mod.rs  sector.rs  secval.rs
crates/perfect-db/src/index/: hash.rs  mod.rs  symmetry.rs
crates/perfect-db/tests/: std_db.rs
crates/tgf-cli/: Cargo.toml
crates/tgf-cli/src/: cli.rs  cli_args.rs  game_adapter.rs  human_db_fen.rs  main.rs  mill_uci.rs  selfplay.rs  uci_adapter.rs
crates/tgf-cli/src/games/: mill.rs  mod.rs
crates/tgf-cli/src/mill_arena/: mod.rs
crates/tgf-cli/src/mill_endgame/: mod.rs  tests.rs
crates/tgf-cli/src/mill_mine/: adversary.rs  engine.rs  entry.rs  frontier.rs  human_seed.rs  mod.rs  scoring.rs  tests.rs
crates/tgf-cli/src/mill_pack/: audit.rs  human_weight.rs  human_weight_tests.rs  mod.rs  recompute.rs  recompute_tests.rs
crates/tgf-cli/src/mill_puzzle/: analysis.rs  mod.rs  puzzle_json.rs  sampler.rs  solver.rs  tests.rs
crates/tgf-cli/src/mill_tune/: datagen.rs  datagen_human.rs  fit.rs  label.rs  mod.rs  stats.rs
crates/tgf-cli/src/mill_uci/: bench.rs  board.rs  mod.rs  patch.rs  setoption.rs  tests.rs
crates/tgf-cli/tests/: head_to_head.rs  opening_book_assets.rs
crates/tgf-cloud-wasm/: Cargo.toml
crates/tgf-cloud-wasm/src/: lib.rs
crates/tgf-frb/: Cargo.toml
crates/tgf-frb/src/: engine_event.rs  frb_generated.rs  game_registry.rs  lib.rs  session_registry.rs
crates/tgf-frb/src/api/: kernel.rs  mill_kernel.rs  mod.rs  simple.rs  simple_tests.rs
crates/tgf-frb/src/games/: mod.rs
crates/tgf-frb/src/games/mill/: action_codec.rs  human_db.rs  mod.rs  patch.rs  perfect.rs  search.rs  variant_extras.rs
crates/tgf-frb/src/games/othello/: mod.rs
crates/tgf-mill/: Cargo.toml
crates/tgf-mill/benches/: searcher.rs
crates/tgf-mill/src/: engine_config.rs  feedback.rs  human_db_codec.rs  human_db_codec_tests.rs  lib.rs  notation.rs  presets.rs  rules.rs  search_depth.rs  text_format.rs  topology.rs
crates/tgf-mill/src/rules/: captures.rs  evaluation.rs  fen.rs  game_impls.rs  legacy_squares.rs  legal_actions.rs  legal_apply.rs  lines.rs  mod.rs  move_priority.rs  rules_setup.rs  state_impl.rs  tests.rs  transitions.rs  types.rs  zobrist.rs
crates/tgf-mill/testdata/legacy_oracle/: 0.json  1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  index.json  known_failures.toml
crates/tgf-mill/tests/: ai_selfplay_master_parity.rs  ai_vs_ai_move15_divergence.rs  head_to_head.rs  opening_d2_response.rs  ruleset_selfplay_master_audit.rs  searcher_integration.rs
crates/tgf-search/: Cargo.toml
crates/tgf-search/benches/: searcher.rs
crates/tgf-search/src/: abort.rs  lib.rs  mcts.rs  options.rs  perft.rs  result.rs  searcher.rs  tests.rs  thread_pool.rs  tt.rs
crates/tgf-search/src/searcher/: iterative_mtdf.rs  mod.rs  move_order.rs  pv.rs  qsearch.rs
crates/xtask-legacy-oracle/: Cargo.toml
crates/xtask-legacy-oracle/src/: main.rs
src/ui/flutter/android/app/: CMakeLists.txt  build.gradle
src/ui/flutter/android/app/src/main/: AndroidManifest.xml
src/ui/flutter/android/app/src/main/cpp/: engine  mill-engine.cpp  mill_engine.cpp
src/ui/flutter/android/app/src/main/res/values/: strings.xml
src/ui/flutter/android/app/src/main/res/values-zh/: strings.xml
src/ui/flutter/android/app/src/profile/: AndroidManifest.xml
src/ui/flutter_app/android/app/: CMakeLists.txt  build.gradle  build.gradle_fdroid  build.gradle_github  proguard-rules.pro
src/ui/flutter_app/android/app/src/debug/: AndroidManifest.xml
src/ui/flutter_app/android/app/src/fdroid/: AndroidManifest.xml
src/ui/flutter_app/android/app/src/main/: AndroidManifest.xml
src/ui/flutter_app/android/app/src/main/cpp/: mill_engine.cpp
src/ui/flutter_app/android/app/src/profile/: AndroidManifest.xml
src/ui/qt/: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  MalomAPI.dll_  boarditem.cpp  boarditem.h  build.bat  build.sh  build_translations.bat  build_translations.sh  client.cpp  client.h  database.cpp  database.h  game.cpp  game.h  game_ai.cpp  game_extra.cpp  game_flow.cpp  game_history.cpp  game_init.cpp  game_interaction.cpp  game_logic.cpp  game_move_list.cpp  game_rotate.cpp  game_rule.cpp  game_save.cpp  game_settings.cpp  game_sound.cpp  game_state.cpp  game_timer.cpp  game_ui.cpp  gamecontroller.cpp  gamecontroller.h  gamescene.cpp  gamescene.h  gameview.cpp  gameview.h  gamewindow.cpp  gamewindow.h  (+19 more)
src/ui/qt/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/ui/qt/translations/: README.md  languagemanager.cpp  languagemanager.h  mill-pro_de.ts  mill-pro_en.ts  mill-pro_hu.ts  mill-pro_zh_CN.ts
(+8064 files in other folders)
