[package]
name        = "perfect-db"
version     = "0.1.0"
edition     = "2024"
description = "Vendored C++ Perfect Database bridge for Nine Men's Morris"
license     = "GPL-3.0-or-later"

[features]
default = ["cpp-oracle"]
cpp-oracle = ["dep:cc"]

[dependencies]
tgf-core = { path = "../tgf-core" }
tgf-mill = { path = "../tgf-mill" }

[build-dependencies]
cc = { version = "1", optional = true }
