[package]
name        = "perfect-db"
version     = "0.1.0"
edition     = "2024"
description = "Rust-native Perfect Database loader with an optional C++ oracle"
license     = "GPL-3.0-or-later"

[features]
default = []
cpp-oracle = ["dep:cc"]

[dependencies]
tgf-core = { path = "../tgf-core" }
tgf-mill = { path = "../tgf-mill" }

[build-dependencies]
cc = { version = "1", optional = true }
