[package]
name        = "tgf-cli"
version     = "0.1.0"
edition     = "2024"
description = "TGF – UCI command-line interface for headless engine operation and benchmarking"
license     = "AGPL-3.0-or-later"

[[bin]]
name = "tgf"
path = "src/main.rs"

[dependencies]
tgf-core   = { path = "../tgf-core" }
tgf-mill   = { path = "../tgf-mill" }
tgf-search = { path = "../tgf-search" }
perfect-db = { path = "../perfect-db", default-features = false }
rusqlite   = { version = "0.32", features = ["bundled"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
