[package]
name = "tgf-cloud-wasm"
version = "0.1.0"
edition = "2024"
description = "Pure Mill rule validation boundary for Sanmill Cloudflare Workers"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tgf-core = { path = "../tgf-core" }
tgf-mill = { path = "../tgf-mill", features = ["serde"] }
wasm-bindgen = "0.2"
