[package]
name        = "rust_lib_sanmill"
version     = "0.1.0"
edition     = "2021"
description = "TGF – flutter_rust_bridge v2 public API surface; compiled as a cdylib for each Flutter target platform"
license     = "GPL-3.0-or-later"

# cdylib  → platform dynamic library loaded by Flutter via dart:ffi.
# staticlib → for iOS (linked into the Runner app binary via Xcode).
# rlib    → for Rust unit tests.
[lib]
name = "rust_lib_sanmill"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tgf-core  = { path = "../tgf-core" }
tgf-mill  = { path = "../tgf-mill" }
tgf-search = { path = "../tgf-search" }
tgf-legacy-cxx = { path = "../tgf-legacy-cxx" }
flutter_rust_bridge = "=2.12.0"
once_cell = "1"

[lints.rust]
# FRB's proc macro currently emits `cfg(frb_expand)`, which rustc 1.95 reports
# as an unexpected cfg.  This is generated-code noise, not a project warning.
unexpected_cfgs = "allow"
