[package]
name        = "rust_lib_sanmill"
version     = "0.1.0"
edition     = "2024"
description = "TGF – flutter_rust_bridge v2 public API surface; compiled as a cdylib for each Flutter target platform"
license     = "GPL-3.0-or-later"

# cdylib  → platform dynamic library loaded by Flutter via dart:ffi.
# staticlib → for iOS (linked into the Runner app binary via Xcode).
# rlib    → for Rust unit tests.
[lib]
name = "rust_lib_sanmill"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tgf-core  = { path = "../tgf-core" }
tgf-mill  = { path = "../tgf-mill" }
tgf-othello = { path = "../tgf-othello" }
tgf-search = { path = "../tgf-search" }
flutter_rust_bridge = "=2.12.0"
once_cell = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
perfect-db = { path = "../perfect-db" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dev-dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

[lints.rust]
# FRB's proc macro currently emits `cfg(frb_expand)`, which rustc 1.95 reports
# as an unexpected cfg.  This is generated-code noise, not a project warning.
unexpected_cfgs = "allow"
