[package]
name        = "tgf-search"
version     = "0.1.0"
edition     = "2024"
description = "TGF – generic game-tree searcher (αβ / MTD(f) / MCTS), monomorphised via Searcher<G: Game>"
license     = "AGPL-3.0-or-later"

[dependencies]
arrayvec = "0.7"
crossbeam-channel = "0.5.15"
tgf-core = { path = "../tgf-core" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "searcher"
harness = false
