[package]
name    = "xtask-legacy-oracle"
version = "0.1.0"
edition = "2021"
description = "One-shot oracle snapshot generator: drives LegacyKernel to produce\ndeterministic per-rule-idx fixtures used by the tgf-mill oracle replay tests."
license = "GPL-3.0-or-later"
publish = false

[[bin]]
name = "xtask-legacy-oracle"
path = "src/main.rs"

[dependencies]
tgf-legacy-cxx = { path = "../tgf-legacy-cxx" }
tgf-mill        = { path = "../tgf-mill" }
tgf-core        = { path = "../tgf-core" }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
